[project]
name = "asyioflow-sdk"
version = "0.1.0"
requires-python = ">=3.10"
description = "Python client SDK for AysioFlow workflow engine"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
anyio_mode = "auto"
testpaths = ["tests"]
